--- a/Main/MainWindow.xaml
+++ b/Main/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:Charts="clr-namespace:Main.Charts" x:Class="Main.MainWindow"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowState="Maximized"
         Title="MainWindow" Height="750" Width="1024">
     <Grid>
         <Grid.RowDefinitions>
@@ -57,10 +57,37 @@
                     </materialDesign:Card>
                 </Grid>
                 <materialDesign:Card Padding="20" Margin="3" Grid.Row="1" >
-                    <Charts:ProyeksiTerhadapPendduk />
+                    <Charts:ProyeksiTerhadapPendduk ></Charts:ProyeksiTerhadapPendduk>
                 </materialDesign:Card>
-               
+                <materialDesign:Card Padding="20" Margin="3" Grid.Row="2" >
+                    <Charts:RasioPerempuanKorbanKekerasan />
+                </materialDesign:Card>
+                <Grid MinHeight="100" Grid.Row="4" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <materialDesign:Card Padding="20" Margin="3" Grid.Column="0"  >
+                        <Charts:JumlahKasusberdasarkanTempatKejadian />
+                    </materialDesign:Card>
+                    <materialDesign:Card Grid.Column="1" Padding="20"  Margin="3"   >
+                        <Charts:JumlahKasusberdasarkanTempatKejadian />
+                    </materialDesign:Card>
+                  
+                </Grid>
+                <Grid MinHeight="100" Grid.Row="5" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <materialDesign:Card Padding="20" Margin="3" Grid.Column="0"  >
+                        <Charts:JenisKekerasanyangDialamiKorban />
+                    </materialDesign:Card>
+                    <materialDesign:Card Grid.Column="1" Padding="20"  Margin="3"   >
+                        <Charts:JumlahKasusberdasarkanTempatKejadian />
+                    </materialDesign:Card>
 
+                </Grid>
 
             </Grid>
 
