--- a/Main/Views/ImportView.xaml
+++ b/Main/Views/ImportView.xaml
@@ -4,14 +4,159 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Main.Views"
-        mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        mc:Ignorable="d" WindowState="Maximized"
         Title="ImportView" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="306*"/>
-            <RowDefinition Height="58*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <DataGrid Grid.Row="1" ItemsSource="{Binding PengaduanViews}"></DataGrid>
+        <StackPanel>
+
+        </StackPanel>
+        <DataGrid Margin="20" Grid.Row="1" ItemsSource="{Binding PengaduanViews}" CanUserAddRows="False" CanUserDeleteRows="True" AutoGenerateColumns="False" ScrollViewer.HorizontalScrollBarVisibility="Visible">
+            <DataGrid.Columns >
+                <DataGridTemplateColumn Header="Status"  >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <materialDesign:PackIcon  ToolTip="{Binding Icon.ToolTip}"  Kind="{Binding Icon.Kind}" Foreground="{Binding Icon.Foreground}" Height="20" Width="30" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn  Header="Registrasi" Binding="{Binding Nomor}"/>
+                <DataGridTextColumn Header="Rujukan" Binding="{Binding Rujukan}"/>
+                <DataGridTextColumn Header="Tanggal" Binding="{Binding Tanggal,StringFormat=dd MMMM yyyy}"/>
+                <DataGridTextColumn Header="Waktu" Binding="{Binding Waktu}"/>
+                <DataGridTextColumn Header="Tempat" Binding="{Binding Tempat}"/>
+                <DataGridTextColumn Header="Penerima" Binding="{Binding Penerima}"/>
+                <DataGridTextColumn Header="Yang Melapor" Binding="{Binding Pelapor.StatusPelapor}"/>
+                <DataGridTemplateColumn  Header="Pelapor" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Pelapor.Nama}">
+                                <TextBlock.ToolTip>
+                                    <StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Nama" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Pelapor.Nama}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Jenis Kelamin" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Pelapor.Gender}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Alamat" FontSize="10"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Pelapor.Alamat}" FontSize="14"></TextBlock>
+                                        </StackPanel>
+
+                                    </StackPanel>
+                                </TextBlock.ToolTip>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Korban" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Korban.Nama}">
+                                <TextBlock.ToolTip>
+                                    <StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Nama" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Korban.Nama}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Jenis Kelamin" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Korban.Gender}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="TTL" FontSize="9"></TextBlock>
+                                            <WrapPanel>
+                                                <TextBlock Text="{Binding Path=Korban.TempatLahir}" FontSize="13"></TextBlock>
+                                                <TextBlock Text=", " FontSize="13"></TextBlock>
+                                                <TextBlock Text="{Binding Path=Korban.TanggalLahir,StringFormat=dd MM yyyy}" FontSize="13"></TextBlock>
+                                            </WrapPanel>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Alamat" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Korban.Alamat}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Agama" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Korban.Agama}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Pendidikan" FontSize="10"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Korban.Pendidikan}" FontSize="14"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Suku" FontSize="10"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Korban.Suku}" FontSize="14"></TextBlock>
+                                        </StackPanel>
+
+                                    </StackPanel>
+                                </TextBlock.ToolTip>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Hubungan Dengan Terlapor" Binding="{Binding HubunganKorbanDenganTerlapor}"/>
+                <DataGridTemplateColumn Header="Terlapor" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Terlapor.Nama}">
+                                <TextBlock.ToolTip>
+                                    <StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Nama" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Terlapor.Nama}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Nama" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Terlapor.Gender}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="TTL" FontSize="9"></TextBlock>
+                                            <WrapPanel>
+                                                <TextBlock Text="{Binding Path=Terlapor.TempatLahir}" FontSize="13"></TextBlock>
+                                                <TextBlock Text="{Binding Path=Terlapor.TanggalLahir}" FontSize="13"></TextBlock>
+                                            </WrapPanel>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Alamat" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Terlapor.Alamat}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Agama" FontSize="9"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Terlapor.Agama}" FontSize="13"></TextBlock>
+                                        </StackPanel>
+
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Pendidikan" FontSize="10"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Terlapor.Pendidikan}" FontSize="14"></TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <TextBlock Text="Suku" FontSize="10"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Terlapor.Suku}" FontSize="14"></TextBlock>
+                                        </StackPanel>
+
+                                    </StackPanel>
+                                </TextBlock.ToolTip>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+
+                </DataGridTemplateColumn>
+
+            </DataGrid.Columns>
+        </DataGrid>
+        <WrapPanel Grid.Row="2" HorizontalAlignment="Right">
+            <Button Margin="2" Command="{Binding SaveCommand}" Content="Simpan" Height="39" Width="99"></Button>
+            <Button Margin="2" Click="Button_Click" Content="Batal" Height="39" Width="99"></Button>
+        </WrapPanel>
     </Grid>
 </Window>
