--- a/Main/Charts/KorbanMenurutBanyaknyaKekerasanyangDialami.xaml
+++ b/Main/Charts/KorbanMenurutBanyaknyaKekerasanyangDialami.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Main.Charts.JumlahKasusberdasarkanTempatKejadian"
+﻿<UserControl x:Class="Main.Charts.KorbanMenurutBanyaknyaKekerasanyangDialami"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:local="clr-namespace:Main.Charts"
              mc:Ignorable="d" Height="400"
@@ -13,17 +13,15 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
-            <Label Width="auto" HorizontalContentAlignment="Center" Content="Jumlah Kasus berdasarkan Tempat Kejadian"></Label>
-        </StackPanel>
-        <lvc:CartesianChart Grid.Row="1"    Series="{Binding SeriesCollection}" LegendLocation="Bottom" >
+        <Label Content="Proyeksi Jumlah Kasus Terhadap Jumlah Penduduk"></Label>
+        <lvc:CartesianChart Grid.Row="1" ScrollHorizontalTo="100"  Series="{Binding SeriesCollection}" LegendLocation="Bottom" >
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Jumlah" Width="250"  LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+                <lvc:Axis Title="Jumlah" ></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis  >
+                <lvc:Axis Title=" " Labels="{Binding Labels}">
                     <lvc:Axis.Separator>
-                        <lvc:Separator IsEnabled="False" ></lvc:Separator>
+                        <lvc:Separator IsEnabled="True"></lvc:Separator>
                     </lvc:Axis.Separator>
                 </lvc:Axis>
             </lvc:CartesianChart.AxisX>
