--- a/Main/Charts/JumlahKorbanberdasarkanTempatKejadian.xaml
+++ b/Main/Charts/JumlahKorbanberdasarkanTempatKejadian.xaml
@@ -1,14 +1,13 @@
 ﻿<main:ChartMaster
             xmlns:main="clr-namespace:Main"
-    x:Class="Main.Charts.JumlahKasusberdasarkanTempatKejadian"
+            x:Class="Main.Charts.JumlahKorbanberdasarkanTempatKejadian"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:local="clr-namespace:Main.Charts"
-             mc:Ignorable="d" Height="400"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             mc:Ignorable="d"  Height="400"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -25,7 +24,7 @@
             <lvc:CartesianChart.AxisX>
                 <lvc:Axis  >
                     <lvc:Axis.Separator>
-                        <lvc:Separator IsEnabled="False" Step="1" ></lvc:Separator>
+                        <lvc:Separator IsEnabled="False" ></lvc:Separator>
                     </lvc:Axis.Separator>
                 </lvc:Axis>
             </lvc:CartesianChart.AxisX>
