--- a/Main/Charts/KorbanBerdasarkanPendidikan.xaml
+++ b/Main/Charts/KorbanBerdasarkanPendidikan.xaml
@@ -1,29 +1,35 @@
-﻿<UserControl x:Class="Main.Charts.KorbanBerdasarkanPendidikan"
+﻿<main:ChartMaster
+            xmlns:main="clr-namespace:Main"
+    x:Class="Main.Charts.KorbanBerdasarkanPendidikan"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Main.Charts"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-             mc:Ignorable="d"  Height="400"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    mc:Ignorable="d"  Height="400"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Content="Proyeksi Jumlah Kasus Terhadap Jumlah Penduduk"></Label>
+        <StackPanel>
+            <Button Style="{DynamicResource btnRefresh}" Command="{Binding RefreshChartCommand}"/>
+            <Label Width="auto" HorizontalContentAlignment="Center" Content="{Binding Title}"></Label>
+        </StackPanel>
         <lvc:CartesianChart Grid.Row="1" ScrollHorizontalTo="100"  Series="{Binding SeriesCollection}" LegendLocation="Bottom" >
             <lvc:CartesianChart.AxisY>
                 <lvc:Axis Title="Jumlah" ></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title=" " Labels="{Binding Labels}">
+                <lvc:Axis Title="Pendidikan" Labels="{Binding Labels}">
                     <lvc:Axis.Separator>
-                        <lvc:Separator IsEnabled="True"></lvc:Separator>
+                        <lvc:Separator IsEnabled="False" Step="1"></lvc:Separator>
                     </lvc:Axis.Separator>
                 </lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
     </Grid>
-</UserControl>
+</main:ChartMaster>
