--- a/Main/Charts/RasioPerempuanKorbanKekerasan.xaml
+++ b/Main/Charts/RasioPerempuanKorbanKekerasan.xaml
@@ -1,4 +1,6 @@
-﻿<UserControl x:Class="Main.Charts.RasioPerempuanKorbanKekerasan"
+﻿<main:ChartMaster
+            xmlns:main="clr-namespace:Main"
+     x:Class="Main.Charts.RasioPerempuanKorbanKekerasan"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,7 +16,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel>
-            <Label Content="Rasio Perempuan Korban Kekerasan"></Label>
+            <Label Width="auto" HorizontalContentAlignment="Center" Content="{Binding Title}"></Label>
             <Label Content="(per 100.000 perempuan)"></Label>
         </StackPanel>
         <lvc:CartesianChart Grid.Row="1" ScrollHorizontalTo="100"  Series="{Binding SeriesCollection}" LegendLocation="Bottom" >
@@ -30,4 +32,4 @@
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
     </Grid>
-</UserControl>
+</main:ChartMaster>
