--- a/Main/style.xaml
+++ b/Main/style.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Main" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+                    xmlns:local="clr-namespace:Main"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <Style TargetType="TextBox" BasedOn="{StaticResource ResourceKey={x:Type TextBox}}">
         <Setter Property="Width" Value="400"/>
@@ -18,6 +19,8 @@
     <Style TargetType="RadioButton" BasedOn="{StaticResource ResourceKey={x:Type RadioButton}}">
         <Setter Property="Margin" Value="0,0,20,0"></Setter>
     </Style>
+    
+    
 
     <Style TargetType="Expander" BasedOn="{StaticResource ResourceKey={x:Type Expander}}">
         <Setter Property="Padding" Value="10"></Setter>
@@ -31,6 +34,22 @@
 
     <Style TargetType="GroupBox" BasedOn="{StaticResource ResourceKey={x:Type GroupBox}}">
         <Setter Property="Margin" Value="15,5"/>
+    </Style>
+
+    <Style x:Key="btnRefresh" TargetType="Button" BasedOn="{StaticResource ResourceKey={x:Type Button}}">
+        <Setter Property="Margin" Value="1"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Right"></Setter>
+        <Setter Property="Width" Value="25"></Setter>
+        <Setter Property="Height" Value="25"></Setter>
+        <Setter Property="Foreground" Value="Green"></Setter>
+        <Setter Property="Background" Value="#FFB8B8B8"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <materialDesign:PackIcon Padding="1" Kind="Refresh" Background="#FFB8B8B8"  Height="24" Width="24" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
