--- a/Main/Charts/JumlahKasusberdasarkanTempatKejadian.xaml
+++ b/Main/Charts/JumlahKasusberdasarkanTempatKejadian.xaml
@@ -23,9 +23,9 @@
                 <lvc:Axis Title="Jumlah" Width="250"  LabelFormatter="{Binding YFormatter}"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis  >
+                <lvc:Axis  Title="Tempat Kejadian" Labels="{Binding Labels}" LabelFormatter="{Binding XFormatter}">
                     <lvc:Axis.Separator>
-                        <lvc:Separator IsEnabled="False" Step="1" ></lvc:Separator>
+                        <lvc:Separator IsEnabled="False" Step="1"  ></lvc:Separator>
                     </lvc:Axis.Separator>
                 </lvc:Axis>
             </lvc:CartesianChart.AxisX>
