--- a/Main/Charts/PelakuBerdasarkanJenisKelamin.xaml
+++ b/Main/Charts/PelakuBerdasarkanJenisKelamin.xaml
@@ -20,7 +20,7 @@
                 <lvc:Axis Title="Jumlah" ></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title=" " Labels="{Binding Labels}">
+                <lvc:Axis Title="Jenis Kelamin" Labels="{Binding Labels}">
                     <lvc:Axis.Separator>
                         <lvc:Separator IsEnabled="True"></lvc:Separator>
                     </lvc:Axis.Separator>
